--- a/src/app/modules/dashboard/pages/activity-detail/activity-detail.component.html
+++ b/src/app/modules/dashboard/pages/activity-detail/activity-detail.component.html
@@ -118,12 +118,23 @@
       </button>
 
       <!-- Mensaje de ya inscrito -->
+      <!-- Este div se muestra cuando el usuario ya está inscrito en la actividad -->
       <div *ngIf="actividad && authServices.hasRole('estudiante') && usuarioInscrito"
-           class="bg-gray-100 text-gray-800 font-medium py-2 px-4 rounded flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-green-600" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
-        </svg>
-        Ya estás inscrito
+           class="bg-gray-100 text-gray-800 font-medium py-2 px-4 rounded flex items-center justify-between">
+        <div class="flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-green-600" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+          </svg>
+          Ya estás inscrito
+        </div>
+        <button
+          (click)="cancelarRegistroUsuario(authServices.getUserId())"
+          class="bg-red-600 hover:bg-red-700 text-white py-1 px-2 rounded text-xs flex items-center ml-4">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"/>
+          </svg>
+          Darse de baja
+        </button>
       </div>
 
       <!-- Botón para administradores -->
@@ -193,7 +204,7 @@
           <th class="border px-4 py-2 text-left">ID de Usuario</th>
           <th class="border px-4 py-2 text-left">Correo</th>
           <th class="border px-4 py-2 text-left">Fecha de Registro</th>
-          <th class="border px-4 py-2 text-center">Acciones</th>
+          <th *ngIf="checkCreatorPermission(actividad)" class="border px-4 py-2 text-center">Acciones</th>
         </tr>
         </thead>
         <tbody>
@@ -201,7 +212,7 @@
           <td class="border px-4 py-2">{{ usuario.usuarioId }}</td>
           <td class="border px-4 py-2">{{ usuario.correo }}</td>
           <td class="border px-4 py-2">{{ usuario.fechaRegistro | date:'dd/MM/yyyy HH:mm' }}</td>
-          <td class="border px-4 py-2 text-center">
+          <td *ngIf="checkCreatorPermission(actividad)" class="border px-4 py-2 text-center">
             <button
               (click)="cancelarRegistroUsuario(usuario.usuarioId)"
               class="bg-red-600 hover:bg-red-700 text-white py-1 px-2 rounded text-xs flex items-center mx-auto">
