--- a/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -48,7 +48,7 @@
                class="w-full h-full object-cover" />
           <div class="absolute bottom-0 left-0 p-4 bg-black bg-opacity-50 w-full">
             <h2 class="text-lg font-semibold text-white">{{ actividades[i].nombre }}</h2>
-            <p class="text-sm text-white mt-1">{{ actividades[i].descripcion }}</p>
+            <p class="text-sm text-white mt-1">{{ (actividades[i].descripcion || '').split(' ').length > 6 ? (actividades[i].descripcion || '').split(' ').slice(0, 6).join(' ') + '...' : actividades[i].descripcion }}</p>
             <a [routerLink]="['actividades/', actividades[i].id]" class="focus:outline-none focus:underline flex items-center mt-4 text-white hover:text-gray-200 hover:underline">
               <p class="pr-2 text-sm font-medium leading-none">Leer más</p>
               <svg class="fill-stroke" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
