--- a/src/app/modules/dashboard/pages/aside/aside.component.html
+++ b/src/app/modules/dashboard/pages/aside/aside.component.html
@@ -13,7 +13,7 @@
       <!-- Header del Sidebar -->
       <div class="py-5 px-4 border-b border-pgreen-300">
         <h2 class="text-white text-lg font-bold text-center">
-          <span *ngIf="!collapsed" class="transition-opacity duration-300">Sofia's Platform</span>
+          <span *ngIf="!collapsed" class="transition-opacity duration-300">EntrenaU</span>
           <span *ngIf="collapsed" class="text-2xl">SP</span>
         </h2>
       </div>
