--- a/src/app/modules/dashboard/pages/navbar/navbar.component.html
+++ b/src/app/modules/dashboard/pages/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 
     <!-- Logo y título -->
     <div class="flex items-center space-x-2">
-      <h1 class="text-white font-semibold text-xl">Sofia's Platform</h1>
+      <h1 class="text-white font-semibold text-xl">EntrenaU</h1>
     </div>
 
     <!-- Botón de perfil/opciones (opcional) -->
