--- a/src/app/modules/auth/auth-routing/login/login.component.html
+++ b/src/app/modules/auth/auth-routing/login/login.component.html
@@ -7,7 +7,7 @@
   </div>
   <!-- Right: Login Form -->
   <div class="lg:p-36 md:p-52 sm:20 p-8 w-full lg:w-1/2">
-    <h1 class="text-2xl font-semibold mb-4">Sofia's platform</h1>
+    <h1 class="text-2xl font-semibold mb-4">EntrenaU</h1>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <!-- Email Input -->
       <div class="mb-4">
