--- a/src/app/modules/dashboard/pages/create-activity/create-activity.component.html
+++ b/src/app/modules/dashboard/pages/create-activity/create-activity.component.html
@@ -45,7 +45,7 @@
 
     <div>
       <label class="block mb-1 text-sm font-medium">Cupo máximo</label>
-      <input formControlName="cupoMaximo" type="number" class="w-full border rounded px-3 py-2" />
+      <input formControlName="cupoMaximo" type="number" min="1" class="w-full border rounded px-3 py-2" />
     </div>
 
     <div>
