--- a/src/app/modules/auth/auth-routing/register/register.component.html
+++ b/src/app/modules/auth/auth-routing/register/register.component.html
@@ -72,7 +72,7 @@
 
       <!-- Footer -->
       <div class="text-center text-xs text-gray-400 mt-10">
-        Copyright © Sofia's platform
+        Copyright © Sergio's platform
       </div>
     </div>
   </div>
