--- a/src/app/modules/auth/auth-routing/login/login.component.html
+++ b/src/app/modules/auth/auth-routing/login/login.component.html
@@ -48,7 +48,7 @@
     <p class="mt-5 text-sm text-center text-gray-600">¿No tienes una cuenta? <a [routerLink]="'/auth/register'" class="text-pgreen-400 font-semibold hover:underline">Regístrate
       aquí</a></p>
     <div class="text-center text-xs text-gray-400 mt-10">
-      Copyright © Sofia's platform
+      Copyright © Sergio's platform
     </div>
   </div>
 </div>
